# Rust_Search

./: Cargo.toml  LICENSE-MIT  README.md  learnings.md
.github/workflows/: ci.yml
benches/: bench_search.rs
src/: builder.rs  filter.rs  lib.rs  search.rs  utils.rs
tests/: filter_tests.rs  search_tests.rs  utils_tests.rs
tests/fixtures/: Cargo.toml
tests/fixtures/subdir/: nested.rs
tests/fixtures/subdir/deep/: deep_file.rs
